# bytes

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  build.rs  crates.js  deploy.sh  help.html  package-lock.json  package.json  run_tests.sh  search-index.js  settings.html  source-files.js  src-files.js
.github/: renovate.json5
.github/workflows/: ci.yml
bench/: bench.rs
benches/: buf.rs  bytes.rs  bytes_mut.rs  local_bytes.rs  vs_easy_buf.rs
bytes/: all.html  index.html  sidebar-items.js  struct.Bytes.html  struct.BytesMut.html  struct.TryGetError.html  trait.Buf.html  trait.BufMut.html
bytes/buf/: index.html  struct.Chain.html  struct.IntoIter.html  struct.Limit.html  struct.Reader.html  struct.Take.html  struct.UninitSlice.html  struct.Writer.html  trait.Buf.html  trait.BufMut.html
ci/: azure-cross-compile.yml  azure-install-rust.yml  azure-rustfmt.yml  azure-test-stable.yml  azure-tsan.yml  cross-patch  install.sh  miri.sh  panic-abort.sh  script.sh  test-stable.sh  tsan  tsan.sh
docs/sourcey/: adapters.md  api-inventory.json  buf-mut.md  buf.md  bytes-mut.md  bytes.md  index.md  installation.md  patterns.md  sourcey.config.ts
examples/: into_buf.rs
implementors/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.LowerHex.js  trait.UpperHex.js  trait.Write.js
implementors/core/hash/: trait.Hash.js
implementors/std/io/: trait.Read.js  (+2 more)
search.desc/bytes/: bytes-desc-0-.js
src/: alloc.rs  arbitrary.rs  buf.rs  byte_buf.rs  byte_str.rs  bytes.rs  bytes_mut.rs  debug.rs  either.rs  heap.rs  hex.rs  lib.rs  loom.rs  prelude.rs  quickcheck.rs  ring.rs  rope.rs  serde.rs  shared_buf.rs  slice.rs  try_alloc.rs  utf8.rs
src/alloc/: heap.rs  mod.rs  pool.rs
src/buf/: append.rs  block.rs  buf.rs  buf_impl.rs  buf_mut.rs  buf_queue.rs  byte.rs  chain.rs  cursor.rs  cursor_mut.rs  exact_size_buf.rs  from_buf.rs  into_buf.rs  iter.rs  limit.rs  macros.rs  mod.rs  prefix.rs  reader.rs  ring.rs  seek_buf.rs  slice.rs  source.rs  take.rs  uninit_slice.rs  vec_deque.rs  writer.rs
src/bytes/: bytes.rs.html  bytes_mut.rs.html  lib.rs.html  loom.rs.html  mod.rs  rope.rs  seq.rs  serde.rs.html  small.rs
src/fmt/: debug.rs  hex.rs  mod.rs
src/imp/: alloc.rs  bytes.rs  local_bytes.rs  mod.rs
src/impls/: mod.rs  promotable.rs  shared.rs  static_buf.rs
src/str/: byte_str.rs  bytes.rs  mod.rs  rope.rs  seq.rs  small.rs
test/: test.rs  test_append.rs  test_block.rs  test_buf.rs  test_buf_fill.rs  test_buf_take.rs  test_byte_buf.rs  test_bytes.rs  test_mut_buf.rs  test_pool.rs  test_ring.rs  test_rope.rs  test_seq.rs  test_seq_byte_str.rs  test_slice_buf.rs  test_small.rs  test_small_byte_str.rs
tests/: extern_buf_bytes.rs  fuzz_bytes.rs  test_buf.rs  test_buf_mut.rs  test_buf_queue.rs  test_bytes.rs  test_bytes_odd_alloc.rs  test_bytes_vec_alloc.rs  test_chain.rs  test_cursor.rs  test_debug.rs  test_exact_size_buf.rs  test_from_buf.rs  test_iter.rs  test_limit.rs  test_local_bytes.rs  test_mut_buf.rs  test_reader.rs  test_seek_buf.rs  test_slice_buf.rs  test_sourcey_docs.py  test_take.rs
(+96 files in other folders)
