[package]

name = "bytes"
# When releasing to crates.io:
# - Update CHANGELOG.md.
# - Create "v1.x.y" git tag.
version = "1.9.0"
edition = "2018"
rust-version = "1.39"
license = "MIT"
authors = [
    "Carl Lerche <me@carllerche.com>",
    "Sean McArthur <sean@seanmonstar.com>",
]
description = "Types and traits for working with bytes"
repository = "https://github.com/tokio-rs/bytes"
readme = "README.md"
keywords = ["buffers", "zero-copy", "io"]
categories = ["network-programming", "data-structures"]

[features]
default = ["std"]
std = []
# Use portable-atomic crate to support platforms without atomic CAS.
# See https://docs.rs/portable-atomic for more information.
extra-platforms = ["portable-atomic"]

[dependencies]
serde = { version = "1.0.60", optional = true, default-features = false, features = ["alloc"] }
# Enable require-cas feature to provide a better error message if the end user forgets to use the cfg or feature.
portable-atomic = { version = "1.3", optional = true, default-features = false, features = ["require-cas"] }

[dev-dependencies]
serde_test = "1.0"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
